--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ h1, h2, h3, h4, h5, h6 { margin: 0; }
   margin: 0 auto 0 auto;
   max-width: 1170px;
 }
+
+/**to declare  the section as a flex container**/
 section {
   display:flex;
 }
@@ -128,7 +130,6 @@ text-transform: uppercase;
 
 .account a{
   font-size:14px;
-  color:red;
 }
 .profile-pic{
   width: 60px;
@@ -139,3 +140,267 @@ text-transform: uppercase;
   border-radius: 100px;
   max-width: 100;
 }
+.hero{
+  background-image: url("../img/hero.jpg");
+  height: 400px;
+  background-size: cover;
+  background-position:center center;
+  text-transform: uppercase;
+}
+.hero h1{
+  position:relative;
+  left: -30px;
+}
+
+.hero h2{
+color:  #faa541
+}
+
+.hero h1,.hero h2 {
+  font-size: 63;
+  font-weight: 700;
+  line-height:0.9;
+}
+.hero p{
+  letter-spacing: 2px;
+  font-weight: 700;
+  font-size: 21px;
+  margin: 0 0 10px;
+}
+.banner{
+  margin: 55px 15px;
+  width:100%;
+  border-top: 1px solid #a0a0a0;
+  border-bottom: 1px solid #a0a0a0;
+  padding: 25px 0;
+
+}
+.banner img{
+  width: 250px;
+}
+.banner-text{
+  font-size : 30px;
+  font-weight :700;
+  text-transform:uppercase;
+  line-height:1;
+  text-align:center;
+}
+/**The :last-child CSS pseudo-class represents the last element among a group of sibling elements.**/
+/**this allows to change the style of the last div in the sale banner section compared  to its upper divs
+that have been styled from .banner-text. It overwrites the mentioned rules and applies the rules that
+ have not been overwritten **/
+.banner-text >div:last-child{
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 5px;
+}
+.category{
+  flex: 0 0 25%;
+  padding: 0 15px;
+}
+.category img{
+  width: 100%;
+}
+
+.category-text{
+  color:#364147;
+  padding: 30px 0;
+  text-transform:uppercase;
+  text-align : center;
+}
+.category-text >div{
+  font-size :16px;
+  font-weight :200;
+  color : #faa541;
+}
+
+.category-text h3{
+  font-size: 30px;
+  font-weight: 700;
+  line-height : 1;
+}
+
+.full-banner{
+  padding: 0 15px;
+  margin:50px 0;
+  position:relative;
+}
+
+/**:before is used to insert content before the element here the class full-banner and style it**/
+.full-banner :before{
+  content: "";
+  position: absolute;
+  border: 1px solid #ffffff;
+  top: 30px;
+  bottom: 30px;
+  left: 50px;
+  right: 50px;
+  z-index: 1;
+}
+
+.full-banner-image{
+  flex: 0 0 58.333333%;
+  background-image: url("../img/vista.jpg");
+  background-size: cover;
+  background-position: top center;
+  min-height: 400px;
+}
+.full-banner-sidebar{
+  flex:0 0 41.666667%;
+  background-color: #364147;
+  text-transform: uppercase;
+  padding: 30px;
+  color: #ffffff;
+}
+.full-banner-sidebar h4{
+  font-size: 40px;
+  font-weight: 700;
+  font-style: italic;
+  color: #637f94;
+  line-height: 1;
+}
+ .full-banner-sidebar h4 :after{
+   content: "";
+   width:100px;
+   height: 1 px;
+   background-color:#faa541;
+   margin :20px auto;
+   display: block;
+ }
+/***the :nth-of-type(n) selector matches
+every element that is the nth child, of the same type (tag name), of its parent.
+The n here specifies the number of the div eg here the first div
+ and below the second div(div:nth-of-type(2))**/
+  .full-banner-sidebar > div:nth-of-type(1){
+    font-size :60px;
+    font-weight: 700;
+    line-height :1;
+  }
+
+  .full-banner-sidebar > div:nth-of-type(2){
+    font-size: 25px;
+    font-weight : 200;
+    letter-spacing : 3px;
+  }
+.full-banner-sidebar .btn.btn-default{
+  margin-top: 50px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  /**z-index specifies the order in which the element will be stacked.
+  Can only be used with elements that have a position or are flex elements**/
+  /* Notice here the full-banner-sidebar has flex property*/
+  z-index: 1;
+}
+footer{
+  display:flex;
+  flex-wrap: wrap;
+  position: relative;
+  z-index: 0;
+  min-height: 330px;
+  background-color: black;
+}
+footer:after{
+  content: "";
+  background-color: #a0a0a0;
+  width:75%;
+  position: absolute;
+  left:0;
+  top: 0;
+  bottom:0;
+  right: 0;
+  z-index: -1;
+
+}
+.lists{
+  flex: 0 0 75%;
+  padding:40px 15px;
+}
+
+.link-header{
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+footer a {
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  padding: 0 0 4px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+.social ul li{
+  display:inline-block;
+}
+.social ul li a{
+display:block;
+width: 23px;
+height:23px;
+background-size: 23px 23px;
+background-position: center;
+}
+.twitter{
+  background-image: url("../img/twitter.svg");
+}
+.facebook{
+    background-image: url("../img/facebook.svg");
+}
+.instagram{
+    background-image: url("../img/instagram.svg");
+}
+.pinterest{
+    background-image: url("../img/pinterest.svg");
+}
+.newsletter .link-header{
+  font-size : 12px;
+  font-weight :400;
+   margin-bottom: 5px;
+}
+.newsletter .link-subheader{
+  font-style: italic;
+  font-size: 12px;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+.newsletter input {
+  border: 1px solid #364147;
+  width: 200px;
+  margin-bottom: 10px;
+}
+.newsletter button{
+  width: 150px;
+  min-width: auto;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+.ps{
+  flex: 0 0 25%;
+  padding: 40px 0;
+  color: #e5e5e5;
+  font-size: 16px;
+}
+.ps img{
+  max-width: 230px;
+}
+ .demo{
+   padding: 0 30px;
+ }
+ .demo:before{
+   content: "";
+   display:block;
+   width: 100%;
+   height:1px;
+   margin 30px 0;
+   background: linear-gradient(to right,#f05a28 0,#e80a89 100%);
+
+ }
+ .copyright{
+   flex: 0 0 75%;
+   padding: 10px o;
+   font-size: 12px;
+   text-align: center;
+
+ }
